# jax-spice

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile.gpu-base  Dockerfile.gpu-tests  README.md  TODO.md  check_missing_defaults.py  check_psp103_params.py  check_zero_defaults.py  foo.lo  index.html  index.md  mkdocs.yml  pyproject.toml  runme.py  runme.py.origin  test_control_flow_codegen.py  test_mir_codegen.py  test_mir_parser_control_flow.py  test_psp103_nan.py  test_setup_model.py  test_setup_model_comparison.py  test_setup_model_mir.py  tranmul.raw
.claude/: repo-map.md
.github/: actionlint.yaml
.github/workflows/: benchmark-comparison.yml  benchmark-nightly.yml  cuda-cache-test.yml  docs-review.yml  lint.yml  profile-nsys-cloudrun.yml  profile-nsys.yml  publish-summary.yml  release.yml  test-gpu-cloudrun.yml  test-gpu.yml  test-pdk.yml  test-tpu.yml  test.yml  xla-flag-sweep.yml
OPENVAF_API_PLAN/: index.html
VACASK-ANALYSIS/: index.html
api_reference/: index.html
architecture_overview/: index.html
benchmarks/: test_benchmarks.py
ci-status/: index.html
cli_reference/: index.html
debug_tools/: index.html
design/verilog-a-source-coverage-tracking/: index.html
docs/: OPENVAF_API_PLAN.md  README.md  api_reference.md  architecture_overview.md  ci-status.md  cli_reference.md  debug_tools.md  for_spectre_users.md  getting_started.md  gpu_solver_architecture.md  gpu_solver_jacobian.md  index.md  memory_management.md  osdi_parameter_architecture.md  parallelism_architecture.md  performance_analysis.md  phi_nodes_guide.md  sparse_solver_roadmap.md  transient_options.md  vacask_sim_format.md  verilog_a_system_functions.md
docs/design/: verilog-a-source-coverage-tracking.md
docs/plans/: plan-generic-runtime-collapse-openvaf.md
examples/: c6288_benchmark.py
for_spectre_users/: index.html
getting_started/: index.html
gpu_solver_architecture/: index.html
gpu_solver_jacobian/: index.html
jax_spice/: __init__.py  _logging.py  cli.py  config.py  logging.py  profiling.py  simulator.py
jax_spice/analysis/: __init__.py  ac.py  context.py  corners.py  dc.py  dc_gpu.py  dc_operating_point.py  debug.py  engine.py  gpu_backend.py  hb.py  homotopy.py  integration.py  limiting.py  mna.py  mna_builder.py  noise.py  openvaf_models.py  options.py  solver.py  solver_factories.py  sources.py  sparse.py  spineax_solver.py  transient.py  transient_gpu.py  umfpack_solver.py  xfer.py
jax_spice/benchmarks/: __init__.py  c6288.py  profiler.py  registry.py  runner.py
jax_spice/codegen/: __init__.py  control_flow_codegen.py  mir_parser.py  python_codegen.py  setup_model_codegen.py  setup_model_mir_codegen.py
jax_spice/sparse/: CMakeLists.txt  README.md  __init__.py  pyproject.toml  umfpack_ffi.cpp  umfpack_jax.py
memory_management/: index.html
openvaf-py/: Cargo.toml  jax_codegen.py  jax_emit.py  openvaf_jax.py  pyproject.toml
openvaf-py/archive/: __init__.py  jax_codegen_mir_interpreter.py  test_jax_codegen_mir_interpreter.py
openvaf-py/openvaf_jax/: __init__.py  cache.py
openvaf-py/openvaf_jax/codegen/: instruction.py
openvaf-py/openvaf_jax/mir/: __init__.py  ssa.py  types.py
openvaf-py/src/: lib.rs
openvaf-py/tests/: conftest.py  test_compile.py  test_jax_analytical.py  test_jax_emit.py  test_jax_equivalence.py  test_jax_interpreter.py  test_jax_vs_osdi.py  test_mosfet_models.py  test_osdi_evaluation.py  test_psp103_realistic.py  test_psp_models.py  test_simple_models.py
openvaf-py/tests_pdk/: test_gf130.py
openvaf_jax/: __init__.py  cache.py  mlx_transform.py
openvaf_jax/osdi_py/: pyproject.toml
openvaf_jax/osdi_py/tests/: test_capacitor.py
osdi-py/: Cargo.toml
osdi-py/src/: lib.rs
osdi-py/tests/: test_capacitor.py
osdi_parameter_architecture/: index.html
parallelism_architecture/: index.html
performance_analysis/: index.html
phi_nodes_guide/: index.html
planning/: README.md
psp102_debug_plan/: index.html
scripts/: README.md  analyze_mir_cfg.py  benchmark_adaptive_strategies.py  benchmark_mlx.py  benchmark_sparse_solvers.py  benchmark_utils.py  build_openvaf.sh  build_vacask.sh  build_vacask_deps.sh  check_dc_stability.py  check_jacobian_stiffness.py  check_pulse_periodicity.py  compare_dc_op.py  compare_device_params.py  compare_lte_solvers.py  compare_openvaf_vs_osdi.py  compare_results.py  compare_vacask.py  debug_dc_init.py  debug_find_discriminator.py  debug_graetz_early.py  debug_graetz_vsource.py  debug_phi_operand_order.py  debug_psp102_phi.py  debug_reachability.py  diagnose_lte_divergence.py  experiment_diffrax.py  extract_c6288_jacobian.py  find_spike.py  generate_multiplier.py  generate_summary.py  investigate_startup.py  jax_to_mlx.py  measure_startup.py  mir_codegen.py  nsys_profile_target.py  osdi_interface.py  parse_psp103_model_card.py  plot_full_mna_vacask_aligned.py  plot_full_mna_vacask_comparison.py  (+44 more)
search/: search_index.json
sim_back_vs_openvaf_jax/: index.html
sparse_solver_roadmap/: index.html
supported_devices/: index.html
tests/: conftest.py  ngspice_test_registry.py  test_ac_analysis.py  test_adaptive_ring_validation.py  test_adaptive_timestep.py  test_corners.py  test_dc_sweep.py  test_device_models.py  test_device_params.py  test_gpu_backend.py  test_gpu_benchmarks.py  test_hb_analysis.py  test_homotopy.py  test_integration_methods.py  test_ngspice_regression.py  test_noise_analysis.py  test_osdi_jax_comparison.py  test_sources.py  test_transient.py  test_transient_gpu.py  test_translator_api.py  test_vacask_benchmarks.py  test_vacask_jax.py  test_vacask_sim_parser.py  test_vacask_suite.py  test_vectorized_mna.py  test_waveform_compare.py  test_wheel_install.py  test_xfer_analysis.py  test_xyce_regression.py  xyce_test_registry.py
transient_options/: index.html
vacask_osdi_inputs/: index.html
vacask_sim_format/: index.html
vajax/: __init__.py  _logging.py  _version.py  cli.py  config.py  mlx_backend.py  profiling.py
vajax/sparse/: CMakeLists.txt  README.md  __init__.py  pyproject.toml  umfpack_jax.py
verilog_a_system_functions/: index.html
(+141 files in other folders)
