[package]
name = "osdi-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for OSDI (Open Simulator Device Interface) shared libraries"

[lib]
name = "osdi_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
libloading = "0.8"
anyhow = "1.0"
libc = "0.2"

[features]
default = []
